--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matcha</title>
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="CSS/main.css">
 </head>
+
 <body>
     <nav>
-        <a href="Home"></a>
-        <a href="Contacto"></a>
-        <a href="Nosotros"></a>
+        <a href="">Home</a>
+        <div>
+            <a href="">Contacto</a>
+            <a href="">Nosotros</a>
+        </div>
 
     </nav>
+
 
 </body>
 
